# SFML-Game-Engine

./: .gitignore  CMakeLists.txt  build.sh
include/: Config.h  Engine.hpp  Engine.inl  Macro.h
include/State/: DefaultState.hpp  GameState.hpp  State.hpp
src/: Engine.cpp  main.cpp
src/State/: DefaultState.cpp  GameState.cpp
